2003-12-08  Lutz Mueller <lutz@users.sourceforge.net>

	Suggestion by Jan Patera <patera@pictview.com>:

	* libexif/exif-entry.c: Do not read beyond e->size.

2003-12-01  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus/mnote-olympus-entry.c: Now that EXIF_FORMAT_SSHORT
	  is in exif-format.h, we do not need to define it any longer.

2003-12-01  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif: Various improvements by Jan Patera <patera@pictview.com>.

2003-10-30  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c: Handle APP13.

2003-10-30  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c: Fix APP0-bug. Patch by Jan Patera
	  <patera@pictview.com>.

2003-10-30  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Add explicit typecasts to ExifShort.
	  Suggested by Jan Patera <patera@pictview.com>.

2003-10-28  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus: Fix. I've got one Olympus file and this gets
	  parsed now.

2003-10-28  Lutz Mueller <lutz@users.sourceforge.net>

	* libjpeg/jpeg-data.c: Do not depend on unistd.h. Reported by
	  Jan Patera <patera@pictview.com>.

2003-10-27  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif: Canon maker notes seem to work now (both loading and
	  saving).

2003-10-27  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif: The code now compiles and loads the canon maker note,
	  but crashes if you query its contents.

2003-10-26  Lutz Mueller <lutz@users.sourceforge.net>

	* test/test-mnote.c: New.
	* libexif: The code now both compiles and doesn't crash,
	  but at least the canon maker note still doesn't get parsed.

2003-10-26  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in
	* Makefile.am: Remove PO_DIRS. Otherwise, automake complains about
	  po and intl not being in SUBDIRS

2003-10-26  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus
	* libexif/canon