@@ -1,3 +1,9 @@
+2003-12-09  Lutz Mueller <lutz@users.sourceforge.net>
+
+	A couple of fixes by Jan Patera <patera@pictview.com>:
+
+	* libexif
+
 2003-12-08  Lutz Mueller <lutz@users.sourceforge.net>
 
 	Suggestion by Jan Patera <patera@pictview.com>:
